# polygontagger

./: LICENSE  README.md  pyproject.toml
polygontagger/: __init__.py  main.py
tests/: test_tag_shape.py
